# deplio

./: .gitignore
api/: Cargo.toml
cli/: Cargo.toml  README.md
cli/src/: config.rs  init.rs  lib.rs  main.rs  parser.rs  templates.rs
cli/templates/: config_tmpl.toml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/app_config/: config.rs  config_tests.rs  mod.rs  templates.rs  templates_tests.rs  traits.rs  v1_models.rs  versioning.rs  versioning_tests.rs
lib/templates/: app_config.toml
