[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "deplio"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
dirs = "6.0.0"
lib = { path = "../lib" }
serde = { version = "1.0.219", features = ["derive"] }
shlex = "1.3.0"
text_io = "0.1.13"
toml = "0.8.20"
